GNOME Bugzilla – Bug 629595
[PATCH] fix the dock recent items issue with format_time_relative_pretty.
Last modified: 2010-09-14 20:19:24 UTC
Created attachment 170206 [details] [review] fixes parameter name for format_time_relative_pretty The header and the implementation use two different names for the same parameter. This confuse gir scanner and we end up with this parameter as in instead of out. Which breaks the recent items.
Filed the lack of a warning against gobject-introspection as bug 629708